--- a/index.html
+++ b/index.html
@@ -245,7 +245,9 @@
             <a class="btn" href="mailto:support@quietforgestudio.org">Contact</a>
             <a class="btn" href="/privacy.html">Privacy</a>
             <a class="btn" href="/terms.html">Terms</a>
-            <a class="btn" href="/projects/golive_pocket.html">GoLivePocket</a>
+
+            <!-- Hidden by default; shown only when visiting /?admin=1 -->
+            <a id="golivepocket-btn" class="btn" href="/projects/golive_pocket.html">GoLivePocket</a>
           </div>
         </div>
       </div>
@@ -268,7 +270,6 @@
           </p>
 
           <div class="meta">
-            <!-- UPDATED: make Live green + glowing -->
             <span class="pill pill-live">Status: Live</span>
             <span class="pill">Android</span>
           </div>
@@ -325,6 +326,20 @@
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
   </script>
+
+  <script>
+    // Show GoLivePocket only when ?admin=1 is present (e.g., https://quietforgestudio.org/?admin=1)
+    (function () {
+      const btn = document.getElementById("golivepocket-btn");
+      if (!btn) return;
+
+      const params = new URLSearchParams(window.location.search);
+      const isAdmin = params.get("admin") === "1";
+
+      if (!isAdmin) {
+        btn.style.display = "none";
+      }
+    })();
+  </script>
 </body>
 </html>
-```
